# template-c-

./: CMakeLists.txt  README.md
cmake/: Package.cmake  Version.cmake
doc/: Copyright.txt  Doxyfile.in  DoxygenText.hpp.in  replace_with_vendor_name-stylesheet.css
scripts/: .projectrc-in  CMakeLists.txt  project-msvc.bat-in  project-vars.bat-in  run-appname.bat  run-appname.sh  run-appnamed.bat  run-appnamed.sh
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/replace_with_app_name/: CMakeLists.txt  CMakeLists.txt.nomacros  replace_with_app_name.cpp
src/replace_with_package_name/: CMakeLists.txt
src/replace_with_package_name/replace_with_library_name/: CMakeLists.txt  CMakeLists.txt.nomacros  Template.cpp  Template.hpp  precompiled.h  replace_with_library_nameAPI.h
src/replace_with_package_name/replace_with_library_name/tests/: CMakeLists.txt  ut_Template.cpp
